--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="search">
 
     <header>
-      <h1>Todos</h1>
+      <h1>Tiwtter Feed Search</h1>
       <input id="searchInput" type="text" placeholder="input keyword">
       <button id='submitButton' name="search">Search</button>
     </header>
@@ -20,19 +20,7 @@
     <section id="feed">
       <span id="currentSearchString">Currently Searching:</span><button id='refreshButton' name="refresh">Refresh</button>
       <ul id="feed-list"></ul>
-    </section>
-
-    <footer>
-      <a id="clear-completed">Clear completed</a>
-      <div id="todo-count"></div>
-    </footer>
-
-  </div>
-
-  <div id="instructions">
-    Double-click to edit a todo.
-  </div>
-
+    </section>  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="js/vendor/underscore.js"></script>
   <script src="js/vendor/backbone.js"></script>
