add minor features
Add better help text and submit on enter.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <section id="notificationPanel">
               ! <span id="notification"></span>
       </section>  
-      <input id="searchInput" type="text" placeholder="input keyword">
+      <input id="searchInput" type="text" placeholder="Type some words here to being searching">
       <button id='submitButton' name="search">Search</button>
     </header> 
     <section id="help">
@@ -61,7 +61,7 @@
               </tr>
             </tbody>
           </table>
-          PS.  You can chain those together, i.e. Typing <b>@kittycommittee kitten</b> will search for tweets referencing @kittycommittee user that contains the word "kitten".
+          PS.  You can chain those together, i.e. Typing <b>@kittycommittee kitten</b> will search for tweets referencing <em>@kittycommittee</em> user that contains the word <em>"kitten"</em>.
       </section>
     </section>
     <section id="feed">
